Add some tests for CvParam

--- a/tests/ControlledVocabulary.Tests/ControlledVocabulary.Tests.fsproj
+++ b/tests/ControlledVocabulary.Tests/ControlledVocabulary.Tests.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="ReferenceObjects.fs" />
+    <Compile Include="CvParamTests.fs" />
     <Compile Include="CvBaseTests.fs" />
     <Compile Include="ParamTests.fs" />
     <Compile Include="ContainerTests.fs" />
