--- a/src/ARCTokenization/structural_ontologies/investigation_metadata_structural_ontology.yml
+++ b/src/ARCTokenization/structural_ontologies/investigation_metadata_structural_ontology.yml
@@ -20,7 +20,7 @@ def: ""
     name: Term Source Name
     def: ""
     relationship: part_of INVMSO:00000002 ! ONTOLOGY SOURCE REFERENCE
-    relationship: follws INVMSO:00000002 ! ONTOLOGY SOURCE REFERENCE
+    relationship: follows INVMSO:00000002 ! ONTOLOGY SOURCE REFERENCE
 
     [Term]
     id: INVMSO:00000004
