--- a/src/ARCTokenization/structural_ontologies/study_metadata_structural_ontology.yml
+++ b/src/ARCTokenization/structural_ontologies/study_metadata_structural_ontology.yml
@@ -79,6 +79,7 @@ def: ""
   name: STUDY DESIGN DESCRIPTORS
   def: ""
   relationship: part_of STDMSO:00000001 ! Study Metadata
+  relationship: part_of STDMSO:00000062 ! STUDY METADATA
   relationship: follows STDMSO:00000008 ! Study File Name
 
     [Term]
@@ -107,6 +108,7 @@ def: ""
   name: STUDY PUBLICATIONS
   def: ""
   relationship: part_of STDMSO:00000001 ! Study Metadata
+  relationship: part_of STDMSO:00000062 ! STUDY METADATA
   relationship: follows STDMSO:00000012 ! Study Design Type Term Source REF
 
     [Term]
@@ -163,6 +165,7 @@ def: ""
   name: STUDY FACTORS
   def: ""
   relationship: part_of STDMSO:00000001 ! Study Metadata
+  relationship: part_of STDMSO:00000062 ! STUDY METADATA
   relationship: follows STDMSO:00000020 ! Study Publication Status Term Source REF
 
     [Term]
@@ -198,6 +201,7 @@ def: ""
   name: STUDY ASSAYS
   def: ""
   relationship: part_of STDMSO:00000001 ! Study Metadata
+  relationship: part_of STDMSO:00000062 ! STUDY METADATA
   relationship: follows STDMSO:00000025 ! Study Factor Type Term Source REF
 
     [Term]
@@ -261,6 +265,7 @@ def: ""
   name: STUDY PROTOCOLS
   def: ""
   relationship: part_of STDMSO:00000001 ! Study Metadata
+  relationship: part_of STDMSO:00000062 ! STUDY METADATA
   relationship: follows STDMSO:00000034 ! Study Assay File Name
 
     [Term]
@@ -366,6 +371,7 @@ def: ""
   name: STUDY CONTACTS
   def: ""
   relationship: part_of STDMSO:00000001 ! Study Metadata
+  relationship: part_of STDMSO:00000062 ! STUDY METADATA
   relationship: follows STDMSO:00000049 ! Study Protocol Components Type Term Source REF
 
     [Term]
